--- a/microservicedemo/consumer-movice/pom.xml
+++ b/microservicedemo/consumer-movice/pom.xml
@@ -3,15 +3,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>microservice</artifactId>
-        <groupId>com.xiesen</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>microservicedemo</artifactId>
+        <groupId>com.xiesen.micro</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>producer-user</artifactId>
+    <artifactId>consumer-movice</artifactId>
 
-    <name>producer-user</name>
+    <name>consumer-movice</name>
     <url>http://www.example.com</url>
 
     <properties>
@@ -32,8 +32,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-
     </dependencies>
 
 
