--- a/microservicedemo/producer-user/pom.xml
+++ b/microservicedemo/producer-user/pom.xml
@@ -3,15 +3,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>microservice</artifactId>
-        <groupId>com.xiesen</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>microservicedemo</artifactId>
+        <groupId>com.xiesen.micro</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>producer-user</artifactId>
 
     <name>producer-user</name>
+    <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
     <properties>
@@ -32,9 +33,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-
     </dependencies>
-
 
 </project>
