--- a/microservicedemo/consumer-movice/src/main/resources/application.yml
+++ b/microservicedemo/consumer-movice/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
 
 user:
   url: http://localhost:7900/user/
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:123@localhost:10000/eureka
