--- a/microservicedemo/pom.xml
+++ b/microservicedemo/pom.xml
@@ -8,9 +8,11 @@
   <artifactId>microservicedemo</artifactId>
   <packaging>pom</packaging>
   <version>1.0</version>
+
   <modules>
     <module>producer-user</module>
     <module>consumer-movice</module>
+    <module>eureka-servers</module>
   </modules>
 
   <name>microservicedemo</name>
@@ -26,6 +28,18 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
+  <!--<dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>Finchley.M9</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>-->
 
   <dependencies>
     <dependency>
