--- a/microservicedemo/pom.xml
+++ b/microservicedemo/pom.xml
@@ -13,6 +13,7 @@
     <module>producer-user</module>
     <module>consumer-movice</module>
     <module>eureka-servers</module>
+    <module>consumer-movice-ribbon</module>
   </modules>
 
   <name>microservicedemo</name>
@@ -29,7 +30,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
-  <!--<dependencyManagement>
+<!--  <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
