--- a/microservicedemo/pom.xml
+++ b/microservicedemo/pom.xml
@@ -14,6 +14,7 @@
     <module>consumer-movice</module>
     <module>eureka-servers</module>
     <module>consumer-movice-ribbon</module>
+    <module>consumer-movice-ribbon-config</module>
   </modules>
 
   <name>microservicedemo</name>
