配置文件的方式配置 ribbon

--- a/microservicedemo/pom.xml
+++ b/microservicedemo/pom.xml
@@ -15,6 +15,7 @@
     <module>eureka-servers</module>
     <module>consumer-movice-ribbon</module>
     <module>consumer-movice-ribbon-config</module>
+    <module>consumer-movice-ribbon-config-properties</module>
   </modules>
 
   <name>microservicedemo</name>
