--- a/microservicedemo/eureka-ha/pom.xml
+++ b/microservicedemo/eureka-ha/pom.xml
@@ -9,16 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka-servers</artifactId>
+    <artifactId>eureka-ha</artifactId>
 
-    <name>eureka-servers</name>
-    <!-- FIXME change it to the project's website -->
+    <name>eureka-ha</name>
     <url>http://www.example.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
