--- a/microservicedemo/pom.xml
+++ b/microservicedemo/pom.xml
@@ -18,6 +18,7 @@
     <module>consumer-movice-ribbon-config-properties</module>
       <module>eureka-ha</module>
     <module>consumer-movice-feign</module>
+      <module>consumer-movice-feign-custom</module>
   </modules>
 
   <name>microservicedemo</name>
