<dev> 用户画像之注册中心

--- a/youfanmain/pom.xml
+++ b/youfanmain/pom.xml
@@ -10,6 +10,8 @@
   <version>1.0.0</version>
   <modules>
     <module>youfananalySrv</module>
+      <module>youfanRegisterCenter</module>
+    <module>youfanInfoInService</module>
   </modules>
 
   <name>youfanmain</name>
