--- a/youfanmain/youfananalySrv/pom.xml
+++ b/youfanmain/youfananalySrv/pom.xml
@@ -76,6 +76,12 @@
         </dependency>
 
         <dependency>
+            <artifactId>youfancommon</artifactId>
+            <groupId>top.xiesen</groupId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
