--- a/rock/rock-admin/src/main/resources/application.properties
+++ b/rock/rock-admin/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+######################################
+###spring datasource
+######################################
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.url=jdbc:mysql://192.168.1.222:3306/rock?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Mysql@123
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+###############################下面Spring的配置文件基本就不用修改了
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+#spring.datasource.filters=stat,wall,log4j
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+
+######################################
+###MyBatis
+######################################
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
