--- a/rock-verify/src/main/resources/application.properties
+++ b/rock-verify/src/main/resources/application.properties
@@ -20,7 +20,7 @@ restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
 # 配置数据源相关 使用阿里巴巴的 druid 数据源
 #
 ############################################################
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/rock
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
