<dev> 添加 kafka 处理逻辑

--- a/rock-verify/src/main/resources/rockConfig.properties
+++ b/rock-verify/src/main/resources/rockConfig.properties
@@ -1,3 +1,8 @@
-top.xiesen.verify.name=谢森
-top.xiesen.verify.website=www.xiesen.top
-top.xiesen.verify.language=java
+############################################################
+#
+# kafka 配置
+#
+############################################################
+rock.verify.kafka.servers=192.168.3.101:9092
+rock.verify.kafka.batch.size=1
+rock.verify.kafka.topic=test
