--- a/rock-verify/pom.xml
+++ b/rock-verify/pom.xml
@@ -206,6 +206,13 @@
             <version>1.7.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.8.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
