--- a/rock-verify/src/main/resources/application.properties
+++ b/rock-verify/src/main/resources/application.properties
@@ -20,9 +20,9 @@ restart.include.pagehelper=/pagehelper-[\\w-\\.]+jar
 # 配置数据源相关 使用阿里巴巴的 druid 数据源
 #
 ############################################################
-spring.datasource.url=jdbc:mysql://192.168.1.222:3306/rock?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/rock
 spring.datasource.username=root
-spring.datasource.password=Mysql@123
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
