<dev> spring boot restful 风格

--- a/rock-security/rock-security-demo/pom.xml
+++ b/rock-security/rock-security-demo/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>rock-security-core</artifactId>
             <version>${rock.security.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
