--- a/rock-security/rock-security-demo/src/main/resources/application.properties
+++ b/rock-security/rock-security-demo/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+################################################
+# mysql 数据库相关配置
+################################################
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url= jdbc:mysql://49.233.88.149:3306/test?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username = root
@@ -8,3 +11,23 @@ spring.session.store-type = none
 security.basic.enabled = false
 
 server.session.timeout = 600
+
+
+################################################
+# redis 相关配置
+################################################
+spring.redis.host=49.233.88.149
+spring.redis.port=6379
+#spring.redis.password=root #根据需要
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
