--- a/xiesen-security/xiesen-security-core/pom.xml
+++ b/xiesen-security/xiesen-security-core/pom.xml
@@ -60,6 +60,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
+
     </dependencies>
 
 </project>
