--- a/xiesen-security/xiesen-security-demo/src/main/resources/application.properties
+++ b/xiesen-security/xiesen-security-demo/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-server.port= 8080
-
+server.port=8080
 ################################################
 # mysql 数据库相关配置
 ################################################
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url= jdbc:mysql://49.233.88.149:3306/test?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username = root
-spring.datasource.password = Mysql@123
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://49.233.88.149:3306/test?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Mysql@123
 # spring session
-spring.session.store-type = none
-server.session.timeout = 600
-
+spring.session.store-type=none
+server.session.timeout=600
 # 关闭安全认证
-security.basic.enabled = false
-
+#security.basic.enabled = false
 ################################################
 # redis 相关配置
 ################################################
@@ -33,3 +29,9 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
+
+
+# 自定义登录页面,如果不设置默认使用浏览器模块中定义的登录页面
+#xiesen.security.browser.loginPage = /demo-signIn.html
+# 设置登录成功返回 JSON 还是进行重定向操作
+xiesen.security.browser.loginType = REDIRECT
