--- a/xiesen-security/xiesen-security-demo/pom.xml
+++ b/xiesen-security/xiesen-security-demo/pom.xml
@@ -30,6 +30,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
 
         <dependency>
             <groupId>io.springfox</groupId>
