<dev> spring security 验证码重构

--- a/xiesen-security/xiesen-security-demo/src/main/resources/application.properties
+++ b/xiesen-security/xiesen-security-demo/src/main/resources/application.properties
@@ -34,4 +34,9 @@ spring.redis.timeout=0
 # 自定义登录页面,如果不设置默认使用浏览器模块中定义的登录页面
 #xiesen.security.browser.loginPage = /demo-signIn.html
 # 设置登录成功返回 JSON 还是进行重定向操作
-xiesen.security.browser.loginType = REDIRECT
+xiesen.security.browser.loginType = JSON
+
+# 设置验证码的长度
+#xiesen.security.code.image.length = 6
+#xiesen.security.code.image.width = 100
+#xiesen.security.code.image.url = /user/*
