--- a/rock-verify/src/main/resources/rockConfig.properties
+++ b/rock-verify/src/main/resources/rockConfig.properties
@@ -3,6 +3,6 @@
 # kafka 配置
 #
 ############################################################
-rock.verify.kafka.servers=192.168.3.101:9092
+rock.verify.kafka.servers=s103:9092
 rock.verify.kafka.batch.size=1
 rock.verify.kafka.topic=test
