--- a/flink-mock-data/pom.xml
+++ b/flink-mock-data/pom.xml
@@ -144,7 +144,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>top.xiesen.mock.kafka.mock.MockKafkaConnect</mainClass>
+                            <mainClass>top.xiesen.mock.kafka.mock.MockKafkaConnectAvro</mainClass>
                         </manifest>
                     </archive>
 
